--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
     compile 'com.android.support:design:25.2.0'
+    compile 'com.google.android.gms:play-services:8.3.0'
     testCompile 'junit:junit:4.12'
 }
